objects/Content_Expiry_Log__c.object
<CustomObject>
    <fields>
        <fullName>Alfresco_Create_Date__c</fullName>
        <description>This is used to store for Alfresco Created Date from ContentVersion Object</description>
        <label>Alfresco Create Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alfresco_Version__c</fullName>
        <description>This is used to store for Alfresco Version  from ContentVersion Object</description>
        <label>Alfresco Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_Document_Id__c</fullName>
        <description>This is used to store for Content Document Id from ContentVersion Object</description>
        <label>Content Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <description>This is used to store for Content Version Id from ContentVersion Object</description>
        <label>Content Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Id__c</fullName>
        <description>This is used to store for Doc ID from ContentVersion Object</description>
        <label>Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Owner__c</fullName>
        <description>This is used to store for Doc Owner  from ContentVersion Object</description>
        <label>Doc Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Time__c</fullName>
        <description>This is used to store for Expiration Date/Time  from ContentVersion Object</description>
        <label>Expiration Date/Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>This is used to store for File Type from ContentVersion Object</description>
        <label>File Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Publish_Location_Id__c</fullName>
        <description>This is used to store for First Publish Location Id from ContentVersion Object</description>
        <label>First Publish Location Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Latest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to store for IsLatest from ContentVersion Object</description>
        <label>Is Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store for User from ContentVersion Object</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expired_Content_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_Date_Time__c</fullName>
        <description>This is used to store for Publish Date/Time from ContentVersion Object</description>
        <label>Publish Date/Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Change__c</fullName>
        <description>This is used to store for Reason For Change from ContentVersion Object</description>
        <label>Reason For Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>For storing Technology</description>
        <label>Technology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This is used to store for Title from ContentVersion Object</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <description>This is used to store for Version Number from ContentVersion Object</description>
        <label>Version Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This object is used to store Log Details of ContentVersion Object</description>
    <label>zzContent Expiry Log</label>
    <nameField>
        <label>Content Expiry Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Expiry Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>